# inkblot

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  inkblot.desktop.in  inkblot.schemas.in  inkblot.spec.in
glade/: Makefile.am  Makefile.in  inkblot.glade
icons/: Makefile.am  Makefile.in
po/: ChangeLog  POTFILES.in  de_DE.po  en_GB.po  fi.po  fr_FR.po  ru.po  sv.po
src/: Makefile.am  Makefile.in  detect.c  inkblot.h  main.c  menu.c
