AC_PREREQ(2.52)
AC_INIT(inkblot, 0.99.9)
AC_CONFIG_SRCDIR(src/main.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_INTLTOOL

GNOME_COMPILE_WARNINGS
AC_PATH_PROG(GCONFTOOL, gconftool-2, no)

if test x"$GCONFTOOL" = xno; then
  AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
fi

AM_GCONF_SOURCE_2



AC_CHECK_LIB(inklevel,get_version_string,[],[
	echo "Error: please install at least libinklevel-0.7.0 before building Inkblot"
	exit -1
	])
pkg_modules="libgnomeui-2.0 libglade-2.0 gtk+-2.0 gconf-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=inkblot
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GetText Package])

dnl Add the languages which your application supports here.
ALL_LINGUAS="de_DE en_GB fi fr_FR sv ru"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
icons/Makefile
src/Makefile
glade/Makefile
po/Makefile.in
inkblot.spec
])

