EXTRA_DIST = \
	printer_black_48.png	\
	printer_red_48.png	\
	printer_blue_48.png	\
	printer_green_48.png	\
	printer_amber_48.png	\
	printer_black_16.png    \
        printer_red_16.png      \
        printer_blue_16.png     \
        printer_green_16.png    \
        printer_amber_16.png	\
	printer_multi_48.png	\
	printer_cyan_48.png	\
	printer_cyan_16.png	\
	printer_magenta_48.png	\
	printer_magenta_16.png	\
	printer_error_16.png	\
	inkblot.png

	
icondir = $(datadir)/inkblot/pixmaps
 
icon_DATA = \
	printer_black_48.png    \
        printer_red_48.png      \
        printer_blue_48.png     \
        printer_green_48.png    \
        printer_amber_48.png    \
        printer_black_16.png    \
        printer_red_16.png      \
        printer_blue_16.png     \
        printer_green_16.png    \
        printer_amber_16.png	\
	printer_multi_48.png	\
	printer_cyan_48.png     \
        printer_cyan_16.png     \
        printer_magenta_48.png  \
        printer_magenta_16.png	\
	printer_error_16.png

appicondir = $(datadir)/pixmaps

appicon_DATA = inkblot.png
